--- a/projects/trip6/trip6.qmd
+++ b/projects/trip6/trip6.qmd
@@ -2,8 +2,7 @@
 title: "TRIP6 inhibits Hippo signaling in response to tension at adherens junctions"
 author: "Shubham Dutta"
 date: "2018-02-01"
-categories: [TRIP6, Vinculin, YAP, adherens junctions, mechano‐sensing, hippo signaling]
-# image: "trip6.jpg"
+categories: [TRIP6, Vinculin, YAP, adherens junctions, mechanosensing, hippo signaling]
 ---
 
 ## Synopsis
@@ -21,7 +20,6 @@ Mechanical tension regulates Hippo signaling via the mechanosensor vinculin at a
 -   TRIP6 inhibits LATS1/2 by competing for its interaction with the activator protein MOB1.
 
 -   Vinculin recruits TRIP6 to adherens junctions to activate YAP in response to mechanical tension.
-
 ## Reference
 
 Dutta S, Mana-Capelli S, Paramasivam M, Dasgupta I, Cirka H, Billiar K, McCollum D. TRIP6 inhibits Hippo signaling in response to tension at adherens junctions. *EMBO Rep*. 2018 Feb;19(2):337-350. doi: [10.15252/embr.201744777](https://doi.org/10.15252/embr.201744777).
